--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Experiência tecnologica, pagamentos instantâneos, velocidade na integração, facilidade para seu cliente,
               e muito mais</h3>
-            <p class="fst-italic">
+            <p class="">
               Todo o poder de uma plataforma direcioanda para a resolução de problema de pagamentos financeiros
             </p>
             <ul>
@@ -134,7 +134,7 @@
               <li><i class="bi bi-check-circle"></i> Controle total</li>
               <li><i class="bi bi-check-circle"></i> Transparência nas operações</li>
             </ul>
-            <p class="fst-italic">
+            <p class="">
               Tenha em suas mãos, a desenvoltura de uma plataforma que te permite alocar saldo de seus clientes de
               maneira rapida e eficiente, e fazer o consumo desse saldo gradativamente através de uma ação de sua
               necessidade, a solução ideal para aqueles onde os clientes precisam realizar serviços e pagar por eles,
