--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <li><i class="bi bi-check-circle"></i> Transparência nas operações</li>
             </ul>
             <p class="">
-              Tenha em suas mãos, a desenvoltura de uma plataforma que te permite alocar saldo de seus clientes de
+              Tenha em suas mãos, a desenvoltura de uma plataforma que te permite realizar diversos tipos de operações financeiras, até alocar saldo de seus clientes de
               maneira rapida e eficiente, e fazer o consumo desse saldo gradativamente através de uma ação de sua
               necessidade, a solução ideal para aqueles onde os clientes precisam realizar serviços e pagar por eles,
               conseguimos fazer isso para você de forma transparente e instantânea
@@ -243,8 +243,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up"
             data-aos-delay="150">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Geração de relátorios nos mais diversos formatos</a></h4>
+              <div class="icon"><i class="bx bx-extension"></i></div>
+              <h4><a href="">Automações de processos via API</a></h4>
               <p></p>
             </div>
           </div>
@@ -269,7 +269,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Soluções personalizadas</a></h4>
+              <h4><a href="">Soluções flexíveis e personalizadas</a></h4>
               <p></p>
             </div>
           </div>
@@ -277,7 +277,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="750">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Visão de administradores</a></h4>
+              <h4><a href="">Visão de administradores para um maior controle</a></h4>
               <p></p>
             </div>
           </div>
@@ -579,7 +579,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
-              <p>comercial@pagweb.com.br</p>
+              <a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
             </div>
           </div>
 
@@ -646,7 +646,8 @@
                 Av. Luís Viana , Paralela - Patamares<br>
                 Salvador - BA, 41730-101<br><br>
                 <strong>Telefone:</strong> +55 71 8816-3910<br>
-                <strong>Email:</strong> comercial@pagweb.com.br<br>
+                <strong>Email:</strong><a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
+<br>
               </p>
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
