--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
+    <div class="container position-relative col-lg-6   col-md-6" data-aos="fade-up" data-aos-delay="500">
       <h1>SOMOS INTEGRIDADE</h1>
       <h2>Segurança, Integração e Confiabilidade.</h2>
       <a href="#about" class="btn-get-started scrollto">Quem somos</a>
