alterando layout principal do site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!--Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> 
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -116,7 +116,115 @@
 
   <main id="main">
     <!-- ======= About Section ======= -->
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="about">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="section-title">
+            <span>Serviços</span>
+            <h2>Serviços</h2>
+            <p>A Pagweb oferece um amplo conjunto de serviços de alta eficiência que ajudam as organizações a se
+              mover
+              mais
+              rapidamente, reduzir custos de TI, escalar e estar na frente do mercado, confira.
+            </p>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Pix</h5>
+                <p class="card-text">Transações rápidas em pouco tempo</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Pagamentos
+                </h5>
+                <p class="card-text">Através de varios meios de rápida
+                  integração.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Boletos
+                  bancários
+                </h5>
+                <p class="card-text">Suas cobranças de forma eficiente.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Solução
+                  flexível
+                </h5>
+                <p class="card-text">Diga qual a sua maior dor, que ficaremos felizes em
+                  resolver.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Pagamento em lote
+                </h5>
+                <p class="card-text">Separe uma quantidade de transações e realize no seu tempo</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Segurança
+                </h5>
+                <p class="card-text">todos os requisitos do Bacen para sua segurança.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Suporte
+                </h5>
+                <p class="card-text">Seus problemas resolvidos em curtos prazos.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3" data-aos="fade-up" style="padding: 10px 20px;">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Disponibilidade</h5>
+                <p class="card-text">Mantenha sua operação a todo vapor.</p>
+              </div>
+            </div>
+          </div>
+          <!-- End Services Section --> <!--inicio itens-->
+
+          <!--fim itens-->
+
+        </div>
+
+      </div>
+    </section>
+
     <section id="about" class="about">
+
       <div class="container">
 
         <div class="row">
@@ -135,16 +243,12 @@
               <li><i class="bi bi-check-circle"></i> Transparência nas operações</li>
             </ul>
             <p class="">
-              Tenha em suas mãos, a desenvoltura de uma plataforma que te permite realizar diversos tipos de operações financeiras, até alocar saldo de seus clientes de
-              maneira rapida e eficiente, e fazer o consumo desse saldo gradativamente através de uma ação de sua
-              necessidade, a solução ideal para aqueles onde os clientes precisam realizar serviços e pagar por eles,
-              conseguimos fazer isso para você de forma transparente e instantânea
             </p>
           </div>
         </div>
-
       </div>
-    </section><!-- End About Section -->
+    </section>
+    <!-- End About Section -->
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
@@ -164,7 +268,7 @@
             <div class="box">
               <span>02</span>
               <h4>Facilidade</h4>
-              <p>Facilidade, segurança, rapidez, tudo que seu cliente precisa para não gerar impacto no processo</p>
+              <p>Nosso sistema opera com os principais requisitos de segurança globais</p>
             </div>
           </div>
 
@@ -217,75 +321,6 @@
       </div>
     </section> -->
     <!-- End Clients Section -->
-
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container">
-
-        <div class="section-title">
-          <span>Serviços</span>
-          <h2>Serviços</h2>
-          <p>A Pagweb oferece um amplo conjunto de serviços de alta eficiência que ajudam as organizações a se mover
-            mais
-            rapidamente, reduzir custos de TI, escalar, estar na frente do mercado, confira.
-          </p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-envelope"></i></div>
-              <h4><a href="">Recebimentos através de PIX</a></h4>
-              <p></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up"
-            data-aos-delay="150">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-extension"></i></div>
-              <h4><a href="">Automações de processos via API</a></h4>
-              <p></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up"
-            data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Acompanhamento de saldo</a></h4>
-              <p></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Layout amigável e responsivo</a></h4>
-              <p></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Soluções flexíveis e personalizadas</a></h4>
-              <p></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="750">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Visão de administradores para um maior controle</a></h4>
-              <p></p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -647,7 +682,7 @@
                 Salvador - BA, 41730-101<br><br>
                 <strong>Telefone:</strong> +55 71 8816-3910<br>
                 <strong>Email:</strong><a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
-<br>
+                <br>
               </p>
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
