--- a/index.html
+++ b/index.html
@@ -680,8 +680,10 @@
                 Wall street empresarial <br>
                 Av. Luís Viana , Paralela - Patamares<br>
                 Salvador - BA, 41730-101<br><br>
+                <strong>Sala:</strong> 508<br>
                 <strong>Telefone:</strong> +55 71 8816-3910<br>
                 <strong>Email:</strong><a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
+
                 <br>
               </p>
               <div class="social-links mt-3">
