alterando numero sala

--- a/index.html
+++ b/index.html
@@ -679,8 +679,9 @@
               <p>
                 Wall street empresarial <br>
                 Av. Luís Viana , Paralela - Patamares<br>
-                Salvador - BA, 41730-101<br><br>
-                <strong>Sala:</strong> 508<br>
+                Salvador - BA, 41730-101<br>
+                <strong>Sala:</strong> 508<br><br>
+
                 <strong>Telefone:</strong> +55 71 8816-3910<br>
                 <strong>Email:</strong><a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
 
