troca de senha de suporte

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-arrow-right" style="color: #00008c;"></i><br>Suporte
                 </h5>
-                <p class="card-text">Seus problemas resolvidos em curtos prazos.</p>
+                <p class="card-text">Atendimento humanizado e suporte eficiente.</p>
               </div>
             </div>
           </div>
