--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
     <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -602,15 +602,15 @@
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Endereço</h3>
               <p>Wall street empresarial - Av. Luís Viana , Paralela - Patamares, Salvador - BA, 41730-101</p>
-            </div>
+            </div> -->
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
@@ -624,7 +624,7 @@
               <h3>Telefone</h3>
               <p>+55 71 8816-3910</p>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -632,9 +632,9 @@
 
           <div class="col-lg-12 ">
 
-            <iframe class="mb-4 mb-lg-0"
+            <!-- <iframe class="mb-4 mb-lg-0"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4414.4375999900885!2d-38.41493838485074!3d-12.940083790876557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71611c06a9fe793%3A0x89ec79289396ec69!2sWall%20Street%20Empresarial!5e1!3m2!1spt-BR!2sbr!4v1680367470911!5m2!1spt-BR!2sbr"
-              frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+              frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe> -->
           </div>
 
           <!-- <div class="col-lg-6">
@@ -658,12 +658,14 @@
               </div>
               <div class="text-center"><button type="submit">Enviar mensagem</button></div>
             </form>
-          </div> -->
+          </div> 
 
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section> -->
+    
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -677,10 +679,10 @@
             <div class="footer-info">
               <h3>Pagweb</h3>
               <p>
-                Wall street empresarial <br>
+                <!-- Wall street empresarial <br>
                 Av. Luís Viana , Paralela - Patamares<br>
                 Salvador - BA, 41730-101<br>
-                <strong>Sala:</strong> 508<br><br>
+                <strong>Sala:</strong> 508<br><br> -->
 
                 <strong>Telefone:</strong> +55 71 8816-3910<br>
                 <strong>Email:</strong><a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
