--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                 Salvador - BA, 41730-101<br>
                 <strong>Sala:</strong> 508<br><br> -->
 
-                <strong>Telefone:</strong> +55 71 8816-3910<br>
+                <!-- <strong>Telefone:</strong> +55 71 8816-3910<br> -->
                 <strong>Email:</strong><a href="mailto:comercial@pagweb.com.br">comercial@pagweb.com.br</a>
 
                 <br>
